--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm run clear && ./node_modules/.bin/babel --out-dir bin src",
     "watch": "npm run build -- --watch",
     "prepush": "npm run lint && npm run test:coverage",
-    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --reporter nyan",
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:tdd": "npm run test -- --watch",
     "test:coverage": "nyc npm test"
   },
@@ -49,6 +49,7 @@
     "chai": "^4.0.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-chai-friendly": "^0.4.0",
     "eslint-plugin-import": "^2.6.1",
     "husky": "^0.14.1",
     "mocha": "^3.4.2",
