--- a/package.json
+++ b/package.json
@@ -53,10 +53,16 @@
     "eslint-plugin-import": "^2.6.1",
     "husky": "^0.14.1",
     "mocha": "^3.4.2",
+    "nock": "^9.0.14",
     "nyc": "^11.0.3",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "sinon": "^3.2.1",
+    "sinon-chai": "^2.13.0"
   },
   "dependencies": {
-    "commander": "^2.11.0"
+    "chalk": "^2.1.0",
+    "commander": "^2.11.0",
+    "ora": "^1.3.0",
+    "request": "^2.81.0"
   }
 }
